--- a/project-management-app/src/assets/i18n/ru.json
+++ b/project-management-app/src/assets/i18n/ru.json
@@ -36,5 +36,13 @@
       "password-match": "Пароли не совпадают!",
       "password-wrong": "Неверный пароль!"
     }
+  },
+
+  "welcome": {
+    "our-team": "Наша команда",
+    "Ihar": "Игорь",
+    "Tetiana": "Татьяна",
+    "Ilia": "Илья",
+    "slogan": "Достигайте новых высот,\nставьте невероятные цели\nи добивайтесь небывалого\nуспеха"
   }
 }
