--- a/project-management-app/src/assets/i18n/ru.json
+++ b/project-management-app/src/assets/i18n/ru.json
@@ -5,7 +5,8 @@
     "discard": "Отменить",
     "back-home": "Вернуться на главную",
     "submit": "Отправить",
-    "home": "Домой"
+    "home": "Домой",
+    "delete-profile": "Удалить профиль"
   },
 
   "navigation": {
@@ -44,5 +45,16 @@
     "Tetiana": "Татьяна",
     "Ilia": "Илья",
     "slogan": "Достигайте новых высот,\nставьте невероятные цели\nи добивайтесь небывалого\nуспеха"
+  },
+
+  "profile": {
+    "change-general": "Изменить основные данные",
+    "change-password": "Изменить пароль",
+    "update-general": "Обновить основные данные",
+    "current-password": "Текущий пароль",
+    "new-password": "Новый пароль",
+    "confirm-new-password": "Подтвердите новый пароль",
+    "name": "Имя",
+    "login": "Логин"
   }
 }
