--- a/project-management-app/src/assets/i18n/ru.json
+++ b/project-management-app/src/assets/i18n/ru.json
@@ -55,6 +55,8 @@
     "new-password": "Новый пароль",
     "confirm-new-password": "Подтвердите новый пароль",
     "name": "Имя",
-    "login": "Логин"
+    "login": "Логин",
+    "delete-description": "Если вы согласитесь ваш аккаунт будет безвозвратно удалён.",
+    "delete-title": "Удалить аккаунт"
   }
 }
