feat localize default error

--- a/project-management-app/src/assets/i18n/ru.json
+++ b/project-management-app/src/assets/i18n/ru.json
@@ -6,7 +6,8 @@
     "back-home": "Вернуться на главную",
     "submit": "Отправить",
     "home": "Домой",
-    "delete-profile": "Удалить профиль"
+    "delete-profile": "Удалить профиль",
+    "ok": "Окей"
   },
 
   "navigation": {
@@ -59,7 +60,9 @@
     "name": "Имя",
     "login": "Логин",
     "delete-description": "Если вы согласитесь ваш аккаунт будет безвозвратно удалён.",
-    "delete-title": "Удалить аккаунт"
+    "delete-title": "Удалить аккаунт",
+    "update-title": "Ваши данные были успешно обновлены.",
+    "update-btn": "ok"
   },
 
   "main": {
@@ -104,5 +107,9 @@
     "delete-task": "Удалить задачу",
     "add-column": "Создать колонку",
     "empty-board": "Пока здесь пусто. Вы можете создать вашу первую колонку!"
+  },
+
+  "error": {
+    "default-error": "Произошла ошибка. Попробуйте позже."
   }
 }
