--- a/project-management-app/src/assets/i18n/en.json
+++ b/project-management-app/src/assets/i18n/en.json
@@ -6,7 +6,8 @@
     "back-home": "Back to home page",
     "submit": "Submit",
     "home": "Home",
-    "delete-profile": "Delete profile"
+    "delete-profile": "Delete profile",
+    "ok": "Ok"
   },
 
   "navigation": {
@@ -59,7 +60,9 @@
     "name": "Name",
     "login": "Login",
     "delete-description": "Once you confirm, all of your account data will be permanently deleted.",
-    "delete-title": "Delete account"
+    "delete-title": "Delete account",
+    "update-title": "Your data has been successfully updated.",
+    "update-btn": "ok"
   },
 
   "main": {
@@ -104,5 +107,9 @@
     "delete-task": "Delete task",
     "add-column": "Add column",
     "empty-board": "No data here yet. You may add your first column!"
+  },
+
+  "error": {
+    "default-error": "An error occurred. Please try again later."
   }
 }
