--- a/project-management-app/src/assets/i18n/ru.json
+++ b/project-management-app/src/assets/i18n/ru.json
@@ -110,6 +110,7 @@
   },
 
   "error": {
-    "default-error": "Произошла ошибка. Попробуйте позже."
+    "default-error": "Произошла ошибка. Попробуйте позже.",
+    "auth-error": "Похоже что вы не вошли в аккаунт. Пожалуйста войдите."
   }
 }
