--- a/project-management-app/src/assets/i18n/ru.json
+++ b/project-management-app/src/assets/i18n/ru.json
@@ -108,7 +108,8 @@
     "delete-column": "Удалить колонку",
     "delete-task": "Удалить задачу",
     "add-column": "Создать колонку",
-    "empty-board": "Пока здесь пусто. Вы можете создать вашу первую колонку!"
+    "empty-board": "Пока здесь пусто. Вы можете создать вашу первую колонку!",
+    "select-user": "Выбрать пользователя"
   },
 
   "default-error": "Произошла ошибка. Попробуйте позже.",
