fix session popup

--- a/project-management-app/src/assets/i18n/ru.json
+++ b/project-management-app/src/assets/i18n/ru.json
@@ -7,7 +7,8 @@
     "submit": "Отправить",
     "home": "Домой",
     "delete-profile": "Удалить профиль",
-    "ok": "Окей"
+    "ok": "Окей",
+    "cancel": "Отмена"
   },
 
   "navigation": {
@@ -27,6 +28,8 @@
     "login-link": "Уже есть аккаунт? Войти!",
     "name": "Имя",
     "login": "Логин",
+    "please-login": "Пожалуйста войдите.",
+    "session": "Время сессии вышло.",
 
     "error": {
       "login": "Пожалуйста, введите логин",
