--- a/project-management-app/src/assets/i18n/en.json
+++ b/project-management-app/src/assets/i18n/en.json
@@ -7,7 +7,8 @@
     "submit": "Submit",
     "home": "Home",
     "delete-profile": "Delete profile",
-    "ok": "Ok"
+    "ok": "Ok",
+    "cancel": "Cancel"
   },
 
   "navigation": {
@@ -27,6 +28,8 @@
     "login-link": "Not registered yet? Sign up!",
     "name": "Name",
     "login": "Login",
+    "please-login": "Please login.",
+    "session": "Your session has expired.",
 
     "error": {
       "login": "Please enter a login.",
