fix popup localize

--- a/project-management-app/src/assets/i18n/en.json
+++ b/project-management-app/src/assets/i18n/en.json
@@ -8,7 +8,8 @@
     "home": "Home",
     "delete-profile": "Delete profile",
     "ok": "Ok",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "login-title": "{{auth.login-title}}"
   },
 
   "navigation": {
