--- a/project-management-app/src/assets/i18n/ru.json
+++ b/project-management-app/src/assets/i18n/ru.json
@@ -8,7 +8,8 @@
     "home": "Домой",
     "delete-profile": "Удалить профиль",
     "ok": "Окей",
-    "cancel": "Отмена"
+    "cancel": "Отмена",
+    "login-title": "{{auth.login-title}}"
   },
 
   "navigation": {
